--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "BAP GUIDE MANAGEMENT",
+  "name": "",
   "version": "1.0.0",
-  "description": "业务分析平台（BAP）管理员操作手册",
+  "description": "",
   "main": "",
   "dependencies": {
     "gitbook-plugin-anchor-navigation-ex": "^1.0.14",
